Fix next/previous post link spacing on Dark Rainbow.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -19,13 +19,14 @@
 ////////////////////
 // ELEMENT STYLES //
 ////////////////////
-.link-color(@green, @orange);
+.link-color(@green, @orange)
+
+;
 
 body {
     background-color: @bg;
     border-top: @border;
     border-bottom: @border;
-
     color: @blue;
     font-family: @font-main;
     .font-size-default();
@@ -61,7 +62,6 @@ hr {
     border-bottom: 3px dotted @purple;
     border-left: none;
     border-right: none;
-
     clear: both;
     width: 20%;
 }
@@ -130,9 +130,20 @@ article {
     p:first-child {
         .font-size-default(1, 1);
     }
+}
 
-    .block-grid > li {
-        text-indent: 0;
+.post-links ul.block-grid {
+    &.two-up, &.three-up {
+        li:first-child {
+            text-align: left;
+            a {
+                margin-left: -4%;
+            }
+        }
+
+        li:last-child {
+            text-align: right;
+        }
     }
 }
 
@@ -169,8 +180,7 @@ article {
     padding-right: 10px;
 }
 
-pre, code, div.codehilite {
-    // nice scrollbars in webkit
+pre, code, div.codehilite { // nice scrollbars in webkit
     ::-webkit-scrollbar {
         height: 10px;
         width: 10px;
@@ -334,12 +344,12 @@ header#secondary {
                 }
 
                 li:not(:last-child):after {
-                        height: 0px;
-                        border-bottom: 3px dotted @purple;
-                        width: 20%;
-                        display: block;
-                        margin: .5em auto;
-                        content: "";
+                    height: 0px;
+                    border-bottom: 3px dotted @purple;
+                    width: 20%;
+                    display: block;
+                    margin: .5em auto;
+                    content: "";
                 }
             }
 
@@ -437,7 +447,7 @@ ul.tags {
             border-color: transparent @bg-accent transparent transparent;
             border-style: solid;
             border-width: 10px 10px 10px 0;
-	    }
+        }
 
         &:after {
             content: "";
@@ -502,7 +512,7 @@ ul.tags {
         .permalink, .attribution {
             font-size: @font-size-base;
 
-            &:before{
+            &:before {
                 content: " / ";
             }
         }
